welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:4: error: Unmatched closing brace '}' ignored here
                                                   else return b}
                                                                ^